--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-native-screens": "^3.31.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "metro-react-native-babel-preset": "^0.77.0"
   },
   "private": true
 }
